--- a/GUIs/live_rates/rate_transmission.conf
+++ b/GUIs/live_rates/rate_transmission.conf
@@ -1,4 +1,5 @@
 [connection]
-port = 2610
-address = 131.188.167.100
+port_motor = 2610
+port_controller = 2611
+address = 131.188.167.97
 msg_length = 13
