--- a/GUIs/live_rates/rate_transmission.conf
+++ b/GUIs/live_rates/rate_transmission.conf
@@ -1,5 +1,13 @@
 [connection]
 port_motor = 2610
-port_controller = 2611
+port_controller = 2612
 address = 131.188.167.97
 msg_length = 13
+
+[client_to_pc1]
+port_controller = 2611
+address = 131.188.167.100
+
+[client_to_pc2]
+port_controller = 2612
+address = 131.188.167.132
