also added the controller server config file functions in the live_Rates GUI

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -3,12 +3,12 @@ msg_length = 13
 
 [cam_pc_1]
 address = 131.188.167.100
-port_workstation = 2611
+port_controller = 2611
 port_motor = 2610
 
 [cam_pc_2]
 address = 131.188.167.132
-port_workstation = 2612
+port_controller = 2612
 port_motor = 2610
 
 [workstation]
@@ -16,8 +16,8 @@ address = 131.188.167.97
 
 [motor_pc_1]
 address = 131.188.167.191
-port_workstation = 2611
+port_controller = 2611
 
 [motor_pc_2]
 address = 131.188.167.192
-port_workstation = 2611
+port_controller = 2611
