--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -1,6 +1,10 @@
 [rate_transmission]
 msg_length = 13
 
+[controller]
+#address = 131.188.167.97
+address = 131.188.167.100
+
 [cam_pc_1]
 address = 131.188.167.100
 port_controller = 2611
@@ -10,9 +14,6 @@ port_motor = 2610
 address = 131.188.167.132
 port_controller = 2612
 port_motor = 2610
-
-[workstation]
-address = 131.188.167.97
 
 [motor_pc_1]
 address = 131.188.167.191
