Added addresses of the serial ports of the motor computers to the config file

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -18,7 +18,11 @@ port_motor = 2610
 [motor_pc_1]
 address = 131.188.167.191
 port_controller = 2611
+address_halogen = ???
+address_motorboard = ???
 
 [motor_pc_2]
 address = 131.188.167.192
 port_controller = 2611
+address_halogen = ???
+address_motorboard = ???
