--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -24,5 +24,5 @@ address_motorboard = /dev/ttyACM1
 [motor_pc_2]
 address = 131.188.167.192
 port_controller = 2611
-address_halogen = ???
-address_motorboard = ???
+address_halogen = /dev/ttyACM1
+address_motorboard = /dev/ttyACM0
