--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -9,11 +9,13 @@ address = 131.188.167.100
 address = 131.188.167.100
 port_controller = 2611
 port_motor = 2610
+hv_address = 192.168.0.26
 
 [cam_pc_2]
 address = 131.188.167.132
 port_controller = 2612
 port_motor = 2610
+hv_address = 192.168.0.27
 
 [motor_pc_1]
 address = 131.188.167.191
