Calibrated second setup

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -17,14 +17,23 @@ port_controller = 2612
 port_motor = 2610
 hv_address = 192.168.0.27
 
-[motor_pc_1]
+#[motor_pc_1]
+[motor_pc_2]
 address = 131.188.167.191
 port_controller = 2611
 address_halogen = /dev/ttyACM0
 address_motorboard = /dev/ttyACM1
+gear_ratio = 4.66
+offset_camera_x = -126.2
 
-[motor_pc_2]
-address = 131.188.167.192
+#[motor_pc_2]
+[motor_pc_1]
+address = 131.188.167.191
+#address = 131.188.167.192
 port_controller = 2611
-address_halogen = /dev/ttyACM1
-address_motorboard = /dev/ttyACM0
+#address_halogen = /dev/ttyACM1
+#address_motorboard = /dev/ttyACM0
+address_halogen = /dev/ttyACM0
+address_motorboard = /dev/ttyACM1
+gear_ratio = 25.2
+offset_camera_x = -118.0
