--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -17,23 +17,44 @@ port_controller = 2612
 port_motor = 2610
 hv_address = 192.168.0.27
 
-#[motor_pc_1]
-[motor_pc_2]
+[motor_pc_1]
 address = 131.188.167.191
 port_controller = 2611
 address_halogen = /dev/ttyACM0
 address_motorboard = /dev/ttyACM1
 gear_ratio = 4.66
 offset_camera_x = -126.2
+offset_center_x = 0
+offset_center_y = 0
+offset_center_z = 0
+lens_focal_lenght = 100
+lens_center_offset_y = 128
+lens_center_offset_z = 0
+mirror_ball_offset_x = 30
+#the y offset equals FIVE Spacers
+mirror_ball_offset_y = 15.6
+mirror_ball_offset_z = 20
+mirror_ball_seperation = 39
 
-#[motor_pc_2]
-[motor_pc_1]
-address = 131.188.167.191
-#address = 131.188.167.192
+
+
+[motor_pc_2]
+address = 131.188.167.192
 port_controller = 2611
-#address_halogen = /dev/ttyACM1
-#address_motorboard = /dev/ttyACM0
-address_halogen = /dev/ttyACM0
-address_motorboard = /dev/ttyACM1
+address_halogen = /dev/ttyACM1
+address_motorboard = /dev/ttyACM0
 gear_ratio = 25.2
 offset_camera_x = -118.0
+#this is all copied from motor_pc_1 and most likely wrong
+offset_center_x = 0
+offset_center_y = 0
+offset_center_z = 0
+lens_focal_lenght = 100
+lens_center_offset_y = 128
+#ALL following was just copied from the first setup!
+lens_center_offset_z = 0
+mirror_ball_offset_x = 30
+#the y offset equals FIVE Spacers
+mirror_ball_offset_y = 15.6
+mirror_ball_offset_z = 20
+mirror_ball_seperation = 39
