--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -17,6 +17,12 @@ port_controller = 2612
 port_motor = 2610
 hv_address = 192.168.0.27
 
+[time_harp_pc]
+address = 131.188.167.90
+port_controller = 2613
+port_motor = 2610
+hv_address = 192.168.0.26
+
 [motor_pc_1]
 address = 131.188.167.191
 port_controller = 2611
