Implemented the check in geometry

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -37,6 +37,7 @@ lens_focal_lenght = 100
 lens_center_offset_y = 128
 lens_center_offset_z = 147.7
 mirror_ball_offset_x = 21
+min_dist_mir_cam_z = 248.9
 #the y offset equals FIVE Spacers
 mirror_ball_offset_y = 11.4
 mirror_ball_offset_z = 20
