--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -42,7 +42,12 @@ min_dist_mir_cam_z = 248.9
 mirror_ball_offset_y = 11.4
 mirror_ball_offset_z = 20
 mirror_ball_seperation = 43
-
+initial_cam_x = 0
+initial_cam_z = 80
+initial_mir_z = 370
+initial_mir_y = 133
+initial_phi = 0
+initial_psi = 0
 
 
 [motor_pc_2]
@@ -66,3 +71,9 @@ min_dist_mir_cam_z = 248.9
 mirror_ball_offset_y = 15.6
 mirror_ball_offset_z = 20
 mirror_ball_seperation = 39
+initial_cam_x = 0
+initial_cam_z = 80
+initial_mir_z = 370
+initial_mir_y = 133
+initial_phi = 0
+initial_psi = 0
