--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -3,7 +3,8 @@ msg_length = 13
 
 [controller]
 address = 131.188.167.97
-#address = 131.188.167.100
+disk_card1 = E
+disk_card2 = H
 
 [cam_pc_1]
 address = 131.188.167.100
