Optimziation now finishes both X-Z scans

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -49,6 +49,19 @@ initial_mir_z = 360
 initial_mir_y = 133
 initial_phi = 0
 initial_psi = 0
+#ranges of the parameters
+min_mirr_phi=-4.5
+max_mirr_phi=4.5
+min_mir_psi=-4.5
+max_mir_psi=4.5
+min_mir_y=121.6
+max_mir_y=146
+min_mir_z=308
+max_mir_z=439
+min_cam_z=0
+max_cam_z=132
+min_cam_x=-125
+max_cam_x=125
 
 
 [motor_pc_2]
@@ -78,3 +91,16 @@ initial_mir_z = 370
 initial_mir_y = 133
 initial_phi = 0
 initial_psi = 0
+#these are all copied from the first setup!
+min_mirr_phi=-4.5
+max_mirr_phi=4.5
+min_mir_psi=-4.5
+max_mir_psi=4.5
+min_mir_y=121.6
+max_mir_y=146
+min_mir_z=308
+max_mir_z=439
+min_cam_z=0
+max_cam_z=132
+min_cam_x=-125
+max_cam_x=125
