hv for combined GUI

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -5,6 +5,8 @@ msg_length = 13
 address = 131.188.167.97
 disk_card1 = E
 disk_card2 = H
+hv_address_card1 = 192.168.0.26
+hv_address_card2 = 192.168.0.27
 
 [cam_pc_1]
 address = 131.188.167.90
