Added the pointing correction. Also in GUI

--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -31,7 +31,7 @@ address = 131.188.167.191
 port_controller = 2611
 address_halogen = /dev/ttyACM1
 address_motorboard = /dev/ttyACM0
-pointing_file = "/home/pi/GITrepo/curcor/GUIs/Motor/CT3.dat"
+pointing_file = /home/pi/GITrepo/curcor/GUIs/Motor/CT3.dat
 gear_ratio = 4.66
 offset_camera_x = -118.3
 offset_center_x = 0
@@ -72,7 +72,7 @@ address = 131.188.167.192
 port_controller = 2611
 address_halogen = /dev/ttyACM0
 address_motorboard = /dev/ttyACM1
-pointing_file = "/home/pi/GITrepo/curcor/GUIs/Motor/CT4.dat"
+pointing_file = /home/pi/GITrepo/curcor/GUIs/Motor/CT4.dat
 gear_ratio = 4.66
 offset_camera_x = -118.0
 #this is all copied from motor_pc_1 and most likely wrong
