--- a/GUIs/Motor/GUIs/global.conf
+++ b/GUIs/Motor/GUIs/global.conf
@@ -42,7 +42,6 @@ lens_center_offset_y = 128
 lens_center_offset_z = 147.7
 mirror_ball_offset_x = 21
 min_dist_mir_cam_z = 305
-#the y offset equals FIVE Spacers
 mirror_ball_offset_y = 11.4
 mirror_ball_offset_z = -28.7
 mirror_ball_seperation = 43
@@ -52,6 +51,7 @@ initial_mir_z = 380
 initial_mir_y = 133
 initial_phi = 0
 initial_psi = 0
+
 #ranges of the parameters
 min_mirr_phi=-4.5
 max_mirr_phi=4.5
@@ -66,6 +66,14 @@ max_cam_z=132
 min_cam_x=-125
 max_cam_x=125
 
+#mapping of the hardware ports between board and box-connectors
+motor0_port=5
+motor1_port=1
+motor2_port=2
+motor3_port=3
+motor4_port=4
+motor5_port=0
+
 
 [motor_pc_2]
 address = 192.168.1.142
@@ -75,17 +83,16 @@ address_motorboard = /dev/ttyACM1
 pointing_file = /home/pi/GITrepo/curcor/GUIs/Motor/CT4.dat
 gear_ratio = 4.66
 offset_camera_x = -118.0
+
 #this is all copied from motor_pc_1 and most likely wrong
 offset_center_x = 0
 offset_center_y = 0
 offset_center_z = 0
 lens_focal_lenght = 100
 lens_center_offset_y = 128
-#ALL following was just copied from the first setup!
 lens_center_offset_z = 147.7
 mirror_ball_offset_x = 21
 min_dist_mir_cam_z = 248.9
-#the y offset equals FIVE Spacers
 mirror_ball_offset_y = 15.6
 mirror_ball_offset_z = 80
 mirror_ball_seperation = 39
@@ -95,7 +102,7 @@ initial_mir_z = 380
 initial_mir_y = 133
 initial_phi = 0
 initial_psi = 0
-#these are all copied from the first setup!
+
 min_mirr_phi=-4.5
 max_mirr_phi=4.5
 min_mir_psi=-4.5
@@ -108,3 +115,11 @@ min_cam_z=0
 max_cam_z=132
 min_cam_x=-125
 max_cam_x=125
+
+#mapping of the hardware ports between board and box-connectors
+motor0_port=0
+motor1_port=1
+motor2_port=2
+motor3_port=3
+motor4_port=4
+motor5_port=5
