--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -2,9 +2,9 @@
 msg_length = 13
 
 [controller]
-address = 10.0.11.40
-disk_card1 = G
-disk_card2 = H
+address = 10.202.32.20
+disk_card1 = K
+disk_card2 = L
 hv_address_card1 = 192.168.0.26
 hv_address_card2 = 192.168.0.27
 
@@ -27,7 +27,7 @@ port_motor = 2610
 hv_address = 131.188.167.228
 
 [motor_pc_1]
-address = 192.168.1.142
+address = 10.202.32.22
 port_controller = 9999
 address_halogen = /dev/ttyACM0
 address_motorboard = /dev/ttyACM1
@@ -76,7 +76,7 @@ motor5_port=0
 
 
 [motor_pc_2]
-address = 131.188.167.192
+address = 10.202.32.23
 port_controller = 2610
 address_halogen = /dev/ttyACM1
 address_motorboard = /dev/ttyACM0
