--- a/GUIs/global.conf
+++ b/GUIs/global.conf
@@ -3,27 +3,27 @@ msg_length = 13
 
 [controller]
 address = 10.202.32.20
-disk_card1 = K
-disk_card2 = L
+disk_card1 = K:
+disk_card2 = L:
 hv_address_card1 = 192.168.0.26
 hv_address_card2 = 192.168.0.27
 
 [cam_pc_1]
-address = 131.188.167.90
+address = 10.202.32.20
 port_controller = 9999
 port_motor = 2610
 hv_address = 192.168.0.26
 
 [cam_pc_2]
-address = 131.188.167.90
+address = 10.202.32.20
 port_controller = 9999
-port_motor = 2610
+port_motor = 2611
 hv_address = 192.168.0.27
 
 [time_harp_pc]
-address = 131.188.167.90
+address = 10.202.32.20
 port_controller = 2613
-port_motor = 2610
+port_motor = 2612
 hv_address = 131.188.167.228
 
 [motor_pc_1]
