Acquisition time optimization

--- a/GUIs/telescopes.conf
+++ b/GUIs/telescopes.conf
@@ -1,4 +1,4 @@
-#TelNo.	TelName	spcm	path	port
-0	CT1	0	K:/ct1/	2611
-1	CT3	1	Y:/ct3/	2613
-2	CT4	2	L:/ct4/	2614
+#No	N.	spc	path	port	mode
+0	CT1	0	F:/ct1/	2611	thu
+1	CT3	1	G:/ct3/	2613	thu
+2	CT4	2	Z:/ct4/	2614	eth
