--- a/GUIs/telescopes.conf
+++ b/GUIs/telescopes.conf
@@ -1,4 +1,3 @@
 #No	N.	spc	path	port	mode
-0	CT1	0	Z:/ct1/	2611	eth
-1	CT3	1	E:/ct3/	2613	thu
-2	CT4	2	F:/ct4/	2614	thu
+0	CT3	0	E:/lab1/	2613	thu
+1	CT4	1	F:/lab2/	2614	thu
