--- a/GUIs/telescopes.conf
+++ b/GUIs/telescopes.conf
@@ -1,3 +1,3 @@
 #No	N.	spc	path	port	mode
-0	CT3	0	E:/lab1/	2613	thu
-1	CT4	1	F:/lab2/	2614	thu
+0	MT1	0	E:/roof/	2613	thu
+1	MT2	1	G:/roof/	2614	thu
